<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="user_avatar">User avatar</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="anonymous_email">Anonymous@example.com</string>
    <string name="message">Message</string>
    <string name="ad_label">Advertisement</string>
    <string name="follow_prompt">You must log in to follow this comic</string>
    <string name="chat_title">Messages</string>
    <string name="updates_title">Recently Updated Comics</string>
    <string name="section_updates">Recently Updated</string>
    <string name="greeting">Hello,</string>
    <string name="guest_name">Guest</string>
    <string name="app_name">MyApp</string>
    <string name="cd_logo">Logo</string>
    <string name="cd_avatar">Avatar</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don not have an account?</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password_query">Forgot password?</string>
    <string name="hint_full_name">Enter your full name</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_subtitle">Enter your email and we’ll send you reset instructions.</string>
    <string name="send_instructions">Send reset</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verify_account_title">Enter Verification Code</string>
    <string name="otp_subtitle">We have sent a 6-digit verification code to your email address. Please enter it below to proceed.</string>
    <string name="hint_enter_code">Enter code</string>
    <string name="resend_code">Resend Code</string>
    <string name="change_email">Change email</string>
    <string name="verify">Verify</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_subtitle">Enter your new password and confirm to update account.</string>
    <string name="hint_new_password">Enter your new password</string>
    <string name="update_password">Reset password</string>
    <string name="title_account">Account</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="level_1">Level 1</string>
    <string name="cd_icon">Icon</string>
    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_updates">Updates</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_account">Account</string>
    <string name="nav_recent">Updated</string>
    <string name="nav_bookmark">Bookmarks</string>
    <string name="action_read_chapter">Read Chapter</string>
    <string name="action_continue">Continue</string>
    <string name="action_remove">Remove</string>
    <string name="action_logout">Log Out</string>
    <string name="hint_search">Search comics</string>
    <string name="hint_send_message">Send message…</string>
</resources>